 + (Commands) Added toggle command /mcchatspy
 + (API) Added many missing SubSkills to SubSkillType class
 + (Permissions) Added permission node mcmmo.commands.mcchatspy & mcmmo.commands.mcchatspy.others
 + (Permissions) Added permission nodes for Harvest Lumber, Splinter, Nature's Bounty, and Bark Surgeon
 + (Permissions) Added mcmmo.commands.mmoinfo for the new mmoinfo/mcinfo command
 + (Locale) Added locale strings for new Woodcutting abilities
 + (Locale) Added locale strings for mcchatspy command
 + (Locale) Added locale strings for JSON integration
 + (Locale) Added locale strings for Taming's Pummel SubSkill
 + (Locale) Added locale strings for Unarmed's Block Cracker SubSkill
 - (Locale) Removed localizations with the following codes for being almost empty: id, HR_hr, et_EE, lv, lt, no, pl_PL, pt_PT, tr_TR
 - (Config) Removed SkillShot's IncreaseLevel & IncreasePercentage (replaced by RankDamageMultiplier)
 - (Config) Removed AxeMastery's MaxBonus & MaxBonusLevel (replaced by RankDamageMultiplier)
 = (Events) Fixed bug where XP rate could be a negative number
 = (Experience) Fixed a bug where you could set a players levels into the negative and bad things would happen
 = (Plugin Compatibility) mcMMO now fires new custom events relating to changes it makes to player scoreboards, plugin authors can listen to these events to improve compatibility
 = (Items) Chimaera Wing now tracks cooldowns between sessions for players (no more disconnect abuse)
 = (Skills) Added missing mushroom blocks to experience.yml defaults
 = (Skills) Tridents will no longer be considered unarmed
 = (MySQL) You can now inspect offline players
 = (MySQL) When converting from MySQL to flatfile mcMMO will now properly include all users in the conversion process
 = (Commands) '/mcMMO help' no longer displays the other/special commands category to players lacking permissions
 + (Party) Parties can now have size limits (configurable in config.yml), party size is unlimited by default